# EnteroDoc

./: Pipfile  README.md  setup.cfg
.devcontainer/: devcontainer.json
entero_document/: ARCHIVE_extractions.py  config.py  document.py  document_factory.py  extractor.py  extracts_html.py  extracts_pdf.py  record.py  url.py  utils.py
tests/: test_config.py  test_document.py  test_extractions.py  test_output.py  test_url.py
tests/data/: mapping_template.json
