[metadata]
name = entero_document
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/entero-document
description = Use one Document class across all file formats to extract metadata and text.
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPL License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    build
    dask
    pyreadstat